--- a/ToDoListProject/package.json
+++ b/ToDoListProject/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "^0.72.6",
+    "react-native-paper": "^5.11.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
