--- a/CocktailApp/package.json
+++ b/CocktailApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weatherapp",
+  "name": "todolistproject",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,18 +10,17 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "axios": "^1.6.5",
     "expo": "~49.0.15",
-    "expo-device": "~5.4.0",
-    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
-    "metro-config": "^0.80.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-maps": "1.7.1",
-    "react-native-web": "~0.19.6",
-    "themed": "^2.1.0"
+    "react-native": "^0.72.6",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-paper": "^5.11.3",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
